--- a/6HandsSwift/SimpleTableViewCell.xib
+++ b/6HandsSwift/SimpleTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B22c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
@@ -11,47 +11,58 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dcg-qq-bva">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dcg-qq-bva">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2vi-Hj-JQv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2vi-Hj-JQv">
                                 <rect key="frame" x="8" y="19" width="25" height="25"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="Z5c-S5-Op6"/>
+                                    <constraint firstAttribute="height" constant="25" id="x4A-FL-LHJ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zks-eB-ihH">
-                                <rect key="frame" x="49" y="0.0" width="139" height="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zks-eB-ihH">
+                                <rect key="frame" x="49" y="3" width="124" height="32"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="32" id="eBm-51-QyG"/>
+                                </constraints>
                                 <string key="text">Карамышевская 
 набережная, 56к2</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="123 м²" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvV-l9-EaB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="123 м²" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvV-l9-EaB">
                                 <rect key="frame" x="181" y="19" width="51" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqx-DB-fVp">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="1000000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqx-DB-fVp">
                                 <rect key="frame" x="246" y="19" width="67" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yellowCorner.png" translatesAutoresizingMaskIntoConstraints="NO" id="Gtw-gv-0la">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellowCorner.png" translatesAutoresizingMaskIntoConstraints="NO" id="Gtw-gv-0la">
                                 <rect key="frame" x="300" y="0.0" width="20" height="20"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="ANR-jI-hq4"/>
+                                    <constraint firstAttribute="width" constant="20" id="F7n-Ac-l1K"/>
+                                </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tbn-n1-OH3">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tbn-n1-OH3">
                                 <rect key="frame" x="51" y="37" width="119" height="18"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="frameForStationName.png" translatesAutoresizingMaskIntoConstraints="NO" id="37F-ab-33u">
@@ -77,9 +88,28 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Yqx-DB-fVp" secondAttribute="trailing" constant="7" id="9At-z4-tjx"/>
+                            <constraint firstItem="zks-eB-ihH" firstAttribute="leading" secondItem="2vi-Hj-JQv" secondAttribute="trailing" constant="16" id="Efw-Ql-xLj"/>
+                            <constraint firstItem="zks-eB-ihH" firstAttribute="top" secondItem="dcg-qq-bva" secondAttribute="top" constant="3" id="HFS-V3-W9C"/>
+                            <constraint firstItem="Yqx-DB-fVp" firstAttribute="leading" secondItem="xvV-l9-EaB" secondAttribute="trailing" priority="950" constant="14" id="Vgf-79-IW9"/>
+                            <constraint firstAttribute="trailing" secondItem="zks-eB-ihH" secondAttribute="trailing" constant="147" id="gNa-uc-egM"/>
+                            <constraint firstAttribute="trailing" secondItem="Gtw-gv-0la" secondAttribute="trailing" id="iQC-tM-uzP"/>
+                            <constraint firstItem="2vi-Hj-JQv" firstAttribute="leading" secondItem="dcg-qq-bva" secondAttribute="leading" constant="8" id="vUb-Ht-QXR"/>
+                            <constraint firstItem="Tbn-n1-OH3" firstAttribute="top" secondItem="zks-eB-ihH" secondAttribute="bottom" constant="2" id="wp9-5v-rgC"/>
+                            <constraint firstItem="Gtw-gv-0la" firstAttribute="top" secondItem="dcg-qq-bva" secondAttribute="top" id="xax-bZ-nN3"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <animations/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="dcg-qq-bva" secondAttribute="trailing" id="4SU-Zs-KPD"/>
+                    <constraint firstItem="dcg-qq-bva" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="93f-Js-WNf"/>
+                    <constraint firstItem="dcg-qq-bva" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="FD6-z0-UCq"/>
+                    <constraint firstAttribute="bottom" secondItem="dcg-qq-bva" secondAttribute="bottom" id="Lry-8Q-wvc"/>
+                    <constraint firstItem="dcg-qq-bva" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bD7-RV-boA"/>
+                    <constraint firstAttribute="trailing" secondItem="dcg-qq-bva" secondAttribute="trailing" id="ulJ-5b-yBy"/>
+                </constraints>
             </tableViewCellContentView>
             <animations/>
             <connections>
@@ -93,7 +123,7 @@
                 <outlet property="stationNameLabel" destination="YSG-tU-gFP" id="Th1-4L-MEZ"/>
                 <outlet property="yellowCorner" destination="Gtw-gv-0la" id="Oax-3R-RpN"/>
             </connections>
-            <point key="canvasLocation" x="652" y="393"/>
+            <point key="canvasLocation" x="412" y="254"/>
         </tableViewCell>
     </objects>
     <resources>
